# unknown-pick

./: .gitignore  CMakeLists.txt  README.md  notes  package.xml
config/: cam_intrinsic.yaml  moveit.rviz  scene.rviz
debug/: object.pcd
helper/: grasp_detector.launch  mask_rcnn_helper.ipynb  test_mask_gen_service.py
launch/: demo.launch  fake_kinect2_stream.launch  grasp_detector.launch  mask_generator.launch  mico_kinect_calibration.launch  mico_moveit_network.launch  mico_moveit_sim_network.launch  moveit_mico_demo.launch  moveit_mico_demo_v3.launch  moveit_panda_tutorial.launch  pcl_filter.launch  test_pipeline.launch
launch/folded/: kinect2_fake.launch  moveit_mico_demo_v2.launch  moveit_panda_tutorial.launch
scripts/: coordinator.py  fake_kinect2.py  fake_mask_generator.py  fake_pose_goal.py  grasps.py  mask_generator.py  mask_generator_fake.py  mdworld_mico_env.py  moveit_grasp.py  moveit_pregrasp_py.py  pose_goal_generator.py  test_mask_gen_service.py
scripts/folded/: pose_goal_generator_once.py
src/: gen_naive_pose.cpp  segment_cloud.cc  segment_cloud_v2.cpp  segment_cloud_v3.cpp
src/folded/: segment_cloud.cpp  segment_cloud_v2.cpp
srv/: coor_req.srv  mask_req.srv  seg_req.srv
testdata/: object.pcd
